View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025176 | Open CASCADE | OCCT:Data Exchange | public | 2014-08-20 18:19 | 2015-05-14 15:32 |
Reporter | abv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.8.0 | ||||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025176: STEP Reader - no error report if referenced entity has wrong type | ||||
Description | The problem comes visible due to issues 0025166, 0025167, 0025169, where STEP files contain entities with references to other entities of incorrect type. OCCT STEP reader is expected to produce error message in such cases, however it does not. The attached synthetic model is just a STEP file containing a box shape with broken reference from APPLICATION_PROTOCOL_DEFINITION # 1 to APPLICATION_CONTEXT # 2. It is expected to generate error message for entity # 1. To reproduce: Draw[]> stepread error-ref.stp a * Draw[]> data c Here we should have error message on invalid reference. Note that error is actually detected internally in the reader, and command "entity 1" will show the following comment: /* On Entity above, Fail Messages recorded at Read time : */ Note also that if reference is changed to refer to inexistent entity (e.g. # 0), the error message is properly reported by 'data c' command. | ||||
Steps To Reproduce | stepread occ25176.stp step * data c should be the one failed check: F:APPLICATION_PROTOCOL_DEFINITION: Parameter n0.4 (application) : Entity has illegal type Attached test script: bug25176 works with file occ25176.stp | ||||
Tags | No tags attached. | ||||
Test case number | bugs xde bug25176 | ||||
child of | 0025166 | closed | bugmaster | Community | STEP Reader - allow GEOMETRIC_SET entity to accept non-geometric children |
child of | 0025167 | closed | bugmaster | Community | STEP Reader - allow NextAssemblyUsageOccurance to accept ProductDefinitionShape as child instead of ProductDefinition |
child of | 0025169 | closed | bugmaster | Community | STEP Reader - allow opened shells to be an outer for ManifoldSolidBrep |
|
error-ref.stp (16,641 bytes) |
|
Branch CR25176 has been created by akz. SHA-1: b6e76da8caab7b55676b8f3fa0fd025467d739d8 Detailed log of new commits: Author: akz Date: Wed Jan 14 16:22:25 2015 +0300 0025176: STEP Reader - no error report if referenced entity has wrong type. Interface_CheckTool does not reset the Check added to CheckList now. |
|
Could you please to add test script for this case. |
2015-01-14 19:47 developer |
occ25176.stp (16,641 bytes) |
2015-01-14 19:47 developer |
bug25176 (308 bytes) |
|
Script is added |
|
Branch CR251756 is ready to be tested. |
|
Branch CR25176 has been updated forcibly by apn. SHA-1: 1ad77e3265ed11290acfd996bd2937846427844d |
|
Branch CR25176 has been updated by apn. SHA-1: 06665851470ce316d9cac08821aa5741bda3e10a Detailed log of new commits: Author: apn Date: Fri Jan 23 18:12:56 2015 +0300 Added test case bugs/xde/bug25176 |
|
Dear BugMaster, Branch CR25176 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested in Release mode. SHA-1: d6622524850af10eb6dabb7896f10b4bff24ede4 Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 11 (11 on master) Windows: 1 (1 on master) Regressions/Differences: de iges_1 G7 I5 I6 J9 O6 O7 O8 O9 P1 Q2 R1 R6 de iges_2 A2 B9 C7 C9 D1 D3 D7 F1 F4 F5 F6 F8 G9 H2 H3 H4 H5 H7 I5 I8 de iges_3 A1 A2 A3 A4 A6 A8 de step_1 A1 A2 C6 C8 D8 E3 E6 G5 H6 H9 I3 I4 I9 J1 J7 J8 J9 P8 P9 Q1 R7 R9 T1 U7 V5 W5 X8 ZC5 ZC9 ZD1 ZD3 ZD4 ZD5 ZD6 ZE7 ZE8 ZE9 ZF1 ZF6 ZF9 ZG6 ZH3 ZH4 ZI9 ZP2 ZP3 ZP8 ZP9 ZQ1 ZQ2 ZQ7 ZQ8 ZR4 ZS1 ZS2 ZS3 ZS4 ZS5 ZS7 ZS8 ZT5 ZT6 ZU1 ZU6 ZU7 ZV4 ZV6 ZW2 ZW6 ZW7 ZW8 ZX3 ZX4 ZX7 ZX8 ZX9 ZY2 ZY3 ZY6 ZY7 ZY8 ZZ7 de step_2 A1 A2 A6 A7 C7 E2 F6 F7 G6 H1 I1 I2 I3 N3 Q7 Y5 de step_3 A2 C3 C4 C7 de step_4 A6 G6 H3 http://occt-tests/CR25176-master-occt/Debian60-64/summary.html http://occt-tests/CR25176-master-occt/Windows-32-VC10/summary.html In PRODUCTS: sat doc_1 A9 sat doc_6 H4 http://occt-tests/CR25176-master-products/Debian60-64/summary.html http://occt-tests/CR25176-master-products/Windows-32-VC10/summary.html Testing cases: bugs xde bug25176 - OK http://occt-tests/CR25176-master-occt/Debian60-64/bugs/xde/bug25176.html http://occt-tests/CR25176-master-occt/Windows-32-VC10/bugs/xde/bug25176.html Testing on Linux: Total MEMORY difference: 362341444 / 362104736 Total CPU difference: 48320.850000000006 / 45421.65000000005 Testing on Windows: Total MEMORY difference: 271273532 / 271507480 Total CPU difference: 35705.546875 / 38634.84375 There are not differences in images found by testdiff. |
|
Please update reference data in all test cases where reported regression is due to failures and warnings reported by "data c" command, as it was exactly the goal of this fix to have errors and warnings reported where they have been hidden previously. The typical error report of this kind is like that: ========================== Comparision with reference data ======== Error : 1 differences with reference data found : Reference data - DATA : Faulties = 0 ( 2 ) Warnings = 0 ( 0 ) Summary = 0 ( 2 ) Current data - DATA : Faulties = 0 ( 200 ) Warnings = 0 ( 0 ) Summary = 0 ( 200 ) ---------------------------------------------- Unless some tests with different kind of regression is found, please consider this fix as tested |
|
Branch CR25176 has been updated by apn. SHA-1: dc75e99756336bc3771478651647311543001217 Detailed log of new commits: Author: apn Date: Fri Feb 6 13:23:42 2015 +0300 Update reference data in test cases. |
|
Reference data in test cases was updated and pushed to OCCT and PRODUCTS branches CR25176. |
|
Branch CR25176 has been updated forcibly by apn. SHA-1: 2e714decb717054a20624b3328afd1b48cdec76a |
|
Branch CR25176 has been deleted by inv. SHA-1: 2e714decb717054a20624b3328afd1b48cdec76a |
occt: master b8f2022f 2015-02-12 08:36:07
Committer: bugmaster Details Diff |
0025176: STEP Reader - no error report if referenced entity has wrong type. Interface_CheckTool does not reset the Check added to CheckList now. Added test case bugs/xde/bug25176 Update reference data in test cases. Resolving conflicts: tests/de/iges_3/A4 tests/de/step_1/R7 tests/de/step_2/H1 |
Affected Issues 0025176 |
|
mod - src/Interface/Interface_CheckTool.cxx | Diff File | ||
add - tests/bugs/xde/bug25176 | Diff File | ||
mod - tests/de/iges_1/G7 | Diff File | ||
mod - tests/de/iges_1/I5 | Diff File | ||
mod - tests/de/iges_1/I6 | Diff File | ||
mod - tests/de/iges_1/J9 | Diff File | ||
mod - tests/de/iges_1/O6 | Diff File | ||
mod - tests/de/iges_1/O7 | Diff File | ||
mod - tests/de/iges_1/O8 | Diff File | ||
mod - tests/de/iges_1/O9 | Diff File | ||
mod - tests/de/iges_1/P1 | Diff File | ||
mod - tests/de/iges_1/Q2 | Diff File | ||
mod - tests/de/iges_1/R1 | Diff File | ||
mod - tests/de/iges_1/R6 | Diff File | ||
mod - tests/de/iges_2/A2 | Diff File | ||
mod - tests/de/iges_2/B9 | Diff File | ||
mod - tests/de/iges_2/C7 | Diff File | ||
mod - tests/de/iges_2/C9 | Diff File | ||
mod - tests/de/iges_2/D1 | Diff File | ||
mod - tests/de/iges_2/D3 | Diff File | ||
mod - tests/de/iges_2/D7 | Diff File | ||
mod - tests/de/iges_2/F1 | Diff File | ||
mod - tests/de/iges_2/F4 | Diff File | ||
mod - tests/de/iges_2/F5 | Diff File | ||
mod - tests/de/iges_2/F6 | Diff File | ||
mod - tests/de/iges_2/F8 | Diff File | ||
mod - tests/de/iges_2/G9 | Diff File | ||
mod - tests/de/iges_2/H2 | Diff File | ||
mod - tests/de/iges_2/H3 | Diff File | ||
mod - tests/de/iges_2/H4 | Diff File | ||
mod - tests/de/iges_2/H5 | Diff File | ||
mod - tests/de/iges_2/H7 | Diff File | ||
mod - tests/de/iges_2/I5 | Diff File | ||
mod - tests/de/iges_2/I8 | Diff File | ||
mod - tests/de/iges_3/A1 | Diff File | ||
mod - tests/de/iges_3/A2 | Diff File | ||
mod - tests/de/iges_3/A3 | Diff File | ||
mod - tests/de/iges_3/A4 | Diff File | ||
mod - tests/de/iges_3/A6 | Diff File | ||
mod - tests/de/iges_3/A8 | Diff File | ||
mod - tests/de/step_1/A1 | Diff File | ||
mod - tests/de/step_1/A2 | Diff File | ||
mod - tests/de/step_1/C6 | Diff File | ||
mod - tests/de/step_1/C8 | Diff File | ||
mod - tests/de/step_1/D8 | Diff File | ||
mod - tests/de/step_1/E3 | Diff File | ||
mod - tests/de/step_1/E6 | Diff File | ||
mod - tests/de/step_1/G5 | Diff File | ||
mod - tests/de/step_1/H6 | Diff File | ||
mod - tests/de/step_1/H9 | Diff File | ||
mod - tests/de/step_1/I3 | Diff File | ||
mod - tests/de/step_1/I4 | Diff File | ||
mod - tests/de/step_1/I9 | Diff File | ||
mod - tests/de/step_1/J1 | Diff File | ||
mod - tests/de/step_1/J7 | Diff File | ||
mod - tests/de/step_1/J8 | Diff File | ||
mod - tests/de/step_1/J9 | Diff File | ||
mod - tests/de/step_1/P8 | Diff File | ||
mod - tests/de/step_1/P9 | Diff File | ||
mod - tests/de/step_1/Q1 | Diff File | ||
mod - tests/de/step_1/R7 | Diff File | ||
mod - tests/de/step_1/R9 | Diff File | ||
mod - tests/de/step_1/T1 | Diff File | ||
mod - tests/de/step_1/U7 | Diff File | ||
mod - tests/de/step_1/V5 | Diff File | ||
mod - tests/de/step_1/W5 | Diff File | ||
mod - tests/de/step_1/X8 | Diff File | ||
mod - tests/de/step_1/ZC5 | Diff File | ||
mod - tests/de/step_1/ZC9 | Diff File | ||
mod - tests/de/step_1/ZD1 | Diff File | ||
mod - tests/de/step_1/ZD3 | Diff File | ||
mod - tests/de/step_1/ZD4 | Diff File | ||
mod - tests/de/step_1/ZD5 | Diff File | ||
mod - tests/de/step_1/ZD6 | Diff File | ||
mod - tests/de/step_1/ZE7 | Diff File | ||
mod - tests/de/step_1/ZE8 | Diff File | ||
mod - tests/de/step_1/ZE9 | Diff File | ||
mod - tests/de/step_1/ZF1 | Diff File | ||
mod - tests/de/step_1/ZF6 | Diff File | ||
mod - tests/de/step_1/ZF9 | Diff File | ||
mod - tests/de/step_1/ZG6 | Diff File | ||
mod - tests/de/step_1/ZH3 | Diff File | ||
mod - tests/de/step_1/ZH4 | Diff File | ||
mod - tests/de/step_1/ZI9 | Diff File | ||
mod - tests/de/step_1/ZP2 | Diff File | ||
mod - tests/de/step_1/ZP3 | Diff File | ||
mod - tests/de/step_1/ZP8 | Diff File | ||
mod - tests/de/step_1/ZP9 | Diff File | ||
mod - tests/de/step_1/ZQ1 | Diff File | ||
mod - tests/de/step_1/ZQ2 | Diff File | ||
mod - tests/de/step_1/ZQ7 | Diff File | ||
mod - tests/de/step_1/ZQ8 | Diff File | ||
mod - tests/de/step_1/ZR4 | Diff File | ||
mod - tests/de/step_1/ZS1 | Diff File | ||
mod - tests/de/step_1/ZS2 | Diff File | ||
mod - tests/de/step_1/ZS3 | Diff File | ||
mod - tests/de/step_1/ZS4 | Diff File | ||
mod - tests/de/step_1/ZS5 | Diff File | ||
mod - tests/de/step_1/ZS7 | Diff File | ||
mod - tests/de/step_1/ZS8 | Diff File | ||
mod - tests/de/step_1/ZT5 | Diff File | ||
mod - tests/de/step_1/ZT6 | Diff File | ||
mod - tests/de/step_1/ZU1 | Diff File | ||
mod - tests/de/step_1/ZU6 | Diff File | ||
mod - tests/de/step_1/ZU7 | Diff File | ||
mod - tests/de/step_1/ZV4 | Diff File | ||
mod - tests/de/step_1/ZV6 | Diff File | ||
mod - tests/de/step_1/ZW2 | Diff File | ||
mod - tests/de/step_1/ZW6 | Diff File | ||
mod - tests/de/step_1/ZW7 | Diff File | ||
mod - tests/de/step_1/ZW8 | Diff File | ||
mod - tests/de/step_1/ZX3 | Diff File | ||
mod - tests/de/step_1/ZX4 | Diff File | ||
mod - tests/de/step_1/ZX7 | Diff File | ||
mod - tests/de/step_1/ZX8 | Diff File | ||
mod - tests/de/step_1/ZX9 | Diff File | ||
mod - tests/de/step_1/ZY2 | Diff File | ||
mod - tests/de/step_1/ZY3 | Diff File | ||
mod - tests/de/step_1/ZY6 | Diff File | ||
mod - tests/de/step_1/ZY7 | Diff File | ||
mod - tests/de/step_1/ZY8 | Diff File | ||
mod - tests/de/step_1/ZZ7 | Diff File | ||
mod - tests/de/step_2/A1 | Diff File | ||
mod - tests/de/step_2/A2 | Diff File | ||
mod - tests/de/step_2/A6 | Diff File | ||
mod - tests/de/step_2/A7 | Diff File | ||
mod - tests/de/step_2/C7 | Diff File | ||
mod - tests/de/step_2/E2 | Diff File | ||
mod - tests/de/step_2/F6 | Diff File | ||
mod - tests/de/step_2/F7 | Diff File | ||
mod - tests/de/step_2/G6 | Diff File | ||
mod - tests/de/step_2/H1 | Diff File | ||
mod - tests/de/step_2/I1 | Diff File | ||
mod - tests/de/step_2/I2 | Diff File | ||
mod - tests/de/step_2/I3 | Diff File | ||
mod - tests/de/step_2/N3 | Diff File | ||
mod - tests/de/step_2/Q7 | Diff File | ||
mod - tests/de/step_2/Y5 | Diff File | ||
mod - tests/de/step_3/A2 | Diff File | ||
mod - tests/de/step_3/C3 | Diff File | ||
mod - tests/de/step_3/C4 | Diff File | ||
mod - tests/de/step_3/C7 | Diff File | ||
mod - tests/de/step_4/A6 | Diff File | ||
mod - tests/de/step_4/G6 | Diff File | ||
mod - tests/de/step_4/H3 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-08-20 18:19 | abv | New Issue | |
2014-08-20 18:19 | abv | Assigned To | => gka |
2014-08-20 18:19 | abv | File Added: error-ref.stp | |
2014-08-20 18:20 | abv | Description Updated | |
2014-08-20 18:20 | abv | Description Updated | |
2014-08-20 18:21 | abv | Description Updated | |
2014-08-20 18:21 | abv | Relationship added | child of 0025166 |
2014-08-20 18:21 | abv | Relationship added | child of 0025167 |
2014-08-20 18:21 | abv | Relationship added | child of 0025169 |
2014-09-26 16:24 | abv | Target Version | 6.8.0 => 7.1.0 |
2015-01-13 13:01 | gka | Assigned To | gka => akz |
2015-01-13 13:01 | gka | Status | new => assigned |
2015-01-14 15:22 |
|
Assigned To | akz => abv |
2015-01-14 15:22 |
|
Assigned To | abv => akz |
2015-01-14 16:24 | git | Note Added: 0036056 | |
2015-01-14 16:28 |
|
Assigned To | akz => gka |
2015-01-14 16:28 |
|
Status | assigned => resolved |
2015-01-14 16:28 |
|
Steps to Reproduce Updated | |
2015-01-14 17:24 | gka | Note Added: 0036061 | |
2015-01-14 17:24 | gka | Assigned To | gka => akz |
2015-01-14 17:24 | gka | Status | resolved => assigned |
2015-01-14 17:39 |
|
File Added: bug25176 | |
2015-01-14 17:43 |
|
File Deleted: bug25176 | |
2015-01-14 19:47 |
|
File Added: occ25176.stp | |
2015-01-14 19:47 |
|
File Added: bug25176 | |
2015-01-14 19:50 |
|
Note Added: 0036075 | |
2015-01-14 19:50 |
|
Assigned To | akz => gka |
2015-01-14 19:50 |
|
Status | assigned => resolved |
2015-01-14 19:50 |
|
Steps to Reproduce Updated | |
2015-01-16 18:56 | gka | Note Added: 0036165 | |
2015-01-16 18:56 | gka | Assigned To | gka => bugmaster |
2015-01-16 18:56 | gka | Status | resolved => reviewed |
2015-01-22 13:42 | apn | Assigned To | bugmaster => apn |
2015-01-22 13:43 | git | Note Added: 0036386 | |
2015-01-23 18:13 | git | Note Added: 0036461 | |
2015-01-23 18:16 | apn | Note Added: 0036463 | |
2015-01-23 18:16 | apn | Test case number | => bugs xde bug25176 |
2015-01-23 18:16 | apn | Assigned To | apn => akz |
2015-01-23 18:16 | apn | Status | reviewed => assigned |
2015-01-23 18:35 | abv | Note Added: 0036472 | |
2015-01-23 18:35 | abv | Assigned To | akz => apn |
2015-01-23 18:35 | abv | Status | assigned => feedback |
2015-02-06 13:24 | git | Note Added: 0037174 | |
2015-02-06 13:36 | apn | Note Added: 0037177 | |
2015-02-06 13:36 | apn | Assigned To | apn => bugmaster |
2015-02-06 13:36 | apn | Status | feedback => tested |
2015-02-12 11:30 | git | Note Added: 0037412 | |
2015-02-13 17:55 | bugmaster | Changeset attached | => occt master b8f2022f |
2015-02-13 17:55 | bugmaster | Status | tested => verified |
2015-02-13 17:55 | bugmaster | Resolution | open => fixed |
2015-03-10 12:59 | bugmaster | Target Version | 7.1.0 => 6.9.0 |
2015-03-18 13:33 | git | Note Added: 0038510 | |
2015-05-14 15:29 |
|
Status | verified => closed |
2015-05-14 15:32 |
|
Fixed in Version | => 6.9.0 |